Scrollbar styled and scroll bug repaired
After adding seventh report  div .reports didn't scroll properly.

--- a/main.css
+++ b/main.css
@@ -149,9 +149,22 @@ border: 10px solid #959393;
     overflow-y: hidden;
     white-space: nowrap;
 }
+#reports::-webkit-scrollbar {
+    height: 20px;
+}
+
+#reports::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}  
+
+#reports::-webkit-scrollbar-thumb {
+    background: #666666; 
+    border-radius: 10px;
+}
 .gameReport {
     --reportColor: #025020;
-    height: 210px;
+    height: 190px;
     width: 300px;
     border-radius: 10px;
     background-color: var(--reportColor);
